Fixed footer icons from invisible to visible

--- a/css/fix-overlays.css
+++ b/css/fix-overlays.css
@@ -19,8 +19,8 @@
 }
 
 /* Hide pseudo-elements that might contain placeholder text */
-/* *::before,
-*::after {
+/* *::before ,
+    ::after{
     content: none !important;
 } */
 
